--- a/blog.html
+++ b/blog.html
@@ -63,24 +63,104 @@
     <div class="row d-flex">
       <div class="col-md-6 col-lg-3 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
-          <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/1718113705620-EGUJ01R98L2WLH9UPY35/Tinashe+blog+image.jpg?format=1000w');">
+          <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0784.jpeg');">
           </a>
- 
+          <div class="text p-4">
+           <div class="meta mb-2">
+            <div><a href="#">March 21, 2024</a></div>
+            <div><a href="#">Admin</a></div>
+            <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+          </div>
+          <h3 class="heading"><a href="#"> &amp; Fufu</a></h3>
+          <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
+          <p><a href="https://www.facebook.com/swizimtrust/" class="btn btn-secondary">Read more</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+      <div class="blog-entry align-self-stretch">
+        <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0785.jpeg');">
+        </a>
+        <div class="text p-4">
+         <div class="meta mb-2">
+          <div><a href="#">October 11, 2023</a></div>
+          <div><a href="#">Admin</a></div>
+          <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 5</a></div>
+        </div>
+        <h3 class="heading"><a href="#">International &amp; girl day!</a></h3>
+        <p>Happy International girl child! This day is set to celebrate the girl child, their rights....</p>
+        <p><a href="https://www.instagram.com/swizimtrust/?hl=en" class="btn btn-secondary">Read more</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+    <div class="blog-entry align-self-stretch">
+      <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0786.jpeg');">
+      </a>
+      <div class="text p-4">
+       <div class="meta mb-2">
+        <div><a href="#">October 09, 2023</a></div>
+        <div><a href="#">Admin</a></div>
+        <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+      </div>
+      <h3 class="heading"><a href="#">World &amp; menstrual day</a></h3>
+      <p>Good mentrual hygiene management plays a fundamental role in enabling women,girls, and other....</p>
+      <p><a href="https://www.facebook.com/swizimtrust/" class="btn btn-secondary">Read more</a></p>
+    </div>
+  </div>
+</div>
+<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+  <div class="blog-entry align-self-stretch">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0787.jpeg');">
+    </a>
     <div class="text p-4">
      <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
+      <div><a href="#">January 26, 2023</a></div>
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">(Learner story)</a></h3>
-    <p>Unleashing Potential: A Remarkable Journey at the Bulawayo nook center </p>
+    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
+    <p>Todays work includes Rodger working on his art-observational drawing and from the looks...</p>
+    <p><a href="https://www.instagram.com/swizimtrust/?hl=en" class="btn btn-secondary">Read more</a></p>
+  </div>
+</div>
+</div>
+
+<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+  <div class="blog-entry align-self-stretch">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0788.jpeg');">
+    </a>
+    <div class="text p-4">
+     <div class="meta mb-2">
+      <div><a href="#">July 21, 2024</a></div>
+      <div><a href="#">Admin</a></div>
+      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+    </div>
+    <h3 class="heading"><a href="#">Sewing  &amp;with the ladies </a></h3>
+    <p>What have we been up to at the nook?</p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/e4831e2a-c8dc-4b49-a69c-abcf65c1aa98/1715072463637.jpg?format=500w');">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0789.jpeg');">
+    </a>
+    <div class="text p-4">
+     <div class="meta mb-2">
+      <div><a href="#">July 11, 2024</a></div>
+      <div><a href="#">Admin</a></div>
+      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+    </div>
+    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
+    <p>Hardware in progres, working on something productive</p>
+    <p><a href="#" class="btn btn-secondary">Read more</a></p>
+  </div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+  <div class="blog-entry align-self-stretch">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/image_5.jpg');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -88,15 +168,15 @@
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Innovation Centre (Nook) </a></h3>
-    <p>Nooks provide a platform for community members to explore their passions </p>
+    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
+    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/b5ca7b0e-bbca-4025-aa2a-b75b085eec30/Picture+1.jpg?format=1500w');">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/image_6.jpg');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -104,24 +184,8 @@
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Agriculture & sustainability</a></h3>
-    <p>Revolutionising Agriculture with Hydroponics at Bulawayo Nook</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/caef56f7-645f-4389-bd2a-fc88dd6363e0/Picture+3.jpg?format=500w');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Agriculture</a></h3>
-    <p>Expanding Our Horizons: Pioneering Smart Agriculture</p>
+    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
+    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
@@ -133,10 +197,7 @@
       <ul>
         <li><a href="#">&lt;</a></li>
         <li class="active"><span>1</span></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
+        <li class="active"><a href="blog-single.html">2</a></li>
         <li><a href="#">&gt;</a></li>
       </ul>
     </div>
@@ -144,6 +205,7 @@
 </div>
 </div>
 </section>
+
 
 
 <footer class="footer">
