--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/dba6a5d5-a810-4f85-aa59-cb069699faba/1660041185095.jpeg?format=1500w');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_0781.jpeg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
