--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -71,9 +71,9 @@
             <div><a href="#">Admin</a></div>
             <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
           </div>
-          <h3 class="heading"><a href="#"> &amp; Fufu</a></h3>
+          <h3 class="heading"><a href="#"> &amp; Nook</a></h3>
           <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
-          <p><a href="https://www.facebook.com/swizimtrust/" class="btn btn-secondary">Read more</a></p>
+          <p><a href="blog-single.html">Read more</a></p>
         </div>
       </div>
     </div>
