--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<div class="text w-100">
 								<h1 class="mb-3">Advancing community development in Zimbabwe.</h1>
 								<div class="d-flex meta">
-									<div class=""><p class="mb-0"><a href="#" class="btn btn-secondary py-3 px-2 px-md-4">Blog</a></p></div>
+									<div class=""><p class="mb-0"><a href="blog.html" class="btn btn-secondary py-3 px-2 px-md-4">Blog</a></p></div>
 								</div>
 							</div>
 						</div>
