--- a/blog-single.html
+++ b/blog-single.html
@@ -58,24 +58,12 @@
  </div>
 </section>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row no-gutters slider-text align-items-end">
-      <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog Details</h1>
-     </div>
-   </div>
- </div>
-</section>
-
 <section class="ftco-section ftco-degree-bg">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 ftco-animate">
        <p>
-        <img src="images/IMG_0784.jpeg" alt="" class="img-fluid">
+        <img src="images/IMG_0784.jpeg"  width="40px" alt="" class="img-fluid">
       </p>
       <h2 class="mb-3">🌟BULAWAYO NOOK HUB 🌟</h2>
       <p>Are you ready for exhibition ? Because we are !
