--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
         </div>
         <h3 class="heading"><a href="#">International &amp; girl day!</a></h3>
         <p>Happy International girl child! This day is set to celebrate the girl child, their rights....</p>
-        <p><a href="https://www.instagram.com/swizimtrust/?hl=en" class="btn btn-secondary">Read more</a></p>
+        <p><a href="blog2.html" class="btn btn-secondary">Read more</a></p>
       </div>
     </div>
   </div>
@@ -105,7 +105,7 @@
       </div>
       <h3 class="heading"><a href="#">World &amp; menstrual day</a></h3>
       <p>Good mentrual hygiene management plays a fundamental role in enabling women,girls, and other....</p>
-      <p><a href="https://www.facebook.com/swizimtrust/" class="btn btn-secondary">Read more</a></p>
+      <p><a href="blog3.html" class="btn btn-secondary">Read more</a></p>
     </div>
   </div>
 </div>
@@ -121,7 +121,7 @@
     </div>
     <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
     <p>Todays work includes Rodger working on his art-observational drawing and from the looks...</p>
-    <p><a href="https://www.instagram.com/swizimtrust/?hl=en" class="btn btn-secondary">Read more</a></p>
+    <p><a href="blog4.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
@@ -138,7 +138,7 @@
     </div>
     <h3 class="heading"><a href="#">Sewing  &amp;with the ladies </a></h3>
     <p>What have we been up to at the nook?</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
+    <p><a href="blog5.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
@@ -154,7 +154,7 @@
     </div>
     <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
     <p>Hardware in progres, working on something productive</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
+    <p><a href="blog6.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
@@ -166,11 +166,11 @@
      <div class="meta mb-2">
       <div><a href="#">July 20, 2020</a></div>
       <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+      <div><a href="blog7.html" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
     <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
+    <p><a href="blog7.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
@@ -186,7 +186,7 @@
     </div>
     <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
+    <p><a href="blog8.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
