--- a/blog-single.html
+++ b/blog-single.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="col-lg-8 ftco-animate">
        <p>
-        <img src="images/IMG_0784.jpeg"  width="40px" alt="" class="img-fluid">
+        <img src="images/IMG_0784.jpeg" alt="" class="img-fluid">
       </p>
       <h2 class="mb-3">🌟BULAWAYO NOOK HUB 🌟</h2>
       <p>Are you ready for exhibition ? Because we are !
