--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
     <div class="row d-flex">
       <div class="col-md-6 col-lg-3 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
-          <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0784.jpeg');">
+          <a href="initiatives.html" class="block-20" style="background-image: url('images/diff.jpeg');">
           </a>
           <div class="text p-4">
            <div class="meta mb-2">
@@ -160,7 +160,7 @@
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="initiatives.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0784.jpg');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -169,7 +169,7 @@
       <div><a href="blog7.html" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
     <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
     <p><a href="blog7.html" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
