--- a/blog3.html
+++ b/blog3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -68,7 +68,7 @@
       <h2 class="mb-3">World and Menstrual Day</h2>
       <p>Good menstrual hygiene management plays a fundamental role in enabling women, girls, and other menstruators to reach their full potential. On any given day, more than 300 million women worldwide are menstruating.  In total, an estimated 500 million lack access to menstrual products and adequate facilities for menstrual hygiene management.</p>
       <p>To effectively manage their menstruation, girls and women require access to water, sanitation and hygiene (WASH) facilities, affordable and appropriate menstrual hygiene materials, information on good practices, and a supportive environment where they can manage menstruation without embarrassment or stigma.</p>
-      <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
+     
       
       <p>
         <img src="images/image_2.jpg" alt="" class="img-fluid">
