--- a/blog2.html
+++ b/blog2.html
@@ -187,21 +187,20 @@
         </div>
       </div>
 
-      <div class="sidebar-box ftco-animate">
+     <div class="sidebar-box ftco-animate">
         <h3>Tag Cloud</h3>
         <div class="tagcloud">
-          <a href="#" class="tag-cloud-link">house</a>
-          <a href="#" class="tag-cloud-link">clean</a>
-          <a href="#" class="tag-cloud-link">washing</a>
-          <a href="#" class="tag-cloud-link">wash</a>
-          <a href="#" class="tag-cloud-link">pressure</a>
-          <a href="#" class="tag-cloud-link">machine</a>
-          <a href="#" class="tag-cloud-link">roof</a>
+          <a href="#" class="tag-cloud-link">NGO</a>
+          <a href="#" class="tag-cloud-link">Periods</a>
+          <a href="#" class="tag-cloud-link">Community</a>
+          <a href="#" class="tag-cloud-link">Youth</a>
+          <a href="#" class="tag-cloud-link">Nook</a>
+          
         </div>
       </div>
 
       <div class="sidebar-box ftco-animate">
-        <h3>Paragraph</h3>
+        <h3>Swizim Trust</h3>
         <p>We are a dynamic for-impact organisation committed to fostering holisyic community impact in Zimbabwe</p>
       </div>
     </div>
