--- a/blog3.html
+++ b/blog3.html
@@ -195,23 +195,22 @@
         </div>
   
         <div class="sidebar-box ftco-animate">
-          <h3>Tag Cloud</h3>
-          <div class="tagcloud">
-            <a href="#" class="tag-cloud-link">house</a>
-            <a href="#" class="tag-cloud-link">clean</a>
-            <a href="#" class="tag-cloud-link">washing</a>
-            <a href="#" class="tag-cloud-link">wash</a>
-            <a href="#" class="tag-cloud-link">pressure</a>
-            <a href="#" class="tag-cloud-link">machine</a>
-            <a href="#" class="tag-cloud-link">roof</a>
-          </div>
-        </div>
-  
-        <div class="sidebar-box ftco-animate">
-          <h3>Paragraph</h3>
-          <p>We are a dynamic for-impact organisation committed to fostering holisyic community impact in Zimbabwe</p>
+        <h3>Tag Cloud</h3>
+        <div class="tagcloud">
+          <a href="#" class="tag-cloud-link">NGO</a>
+          <a href="#" class="tag-cloud-link">Periods</a>
+          <a href="#" class="tag-cloud-link">Community</a>
+          <a href="#" class="tag-cloud-link">Youth</a>
+          <a href="#" class="tag-cloud-link">Nook</a>
+          
         </div>
       </div>
+
+      <div class="sidebar-box ftco-animate">
+        <h3>Swizim Trust</h3>
+        <p>We are a dynamic for-impact organisation committed to fostering holisyic community impact in Zimbabwe</p>
+      </div>
+    </div>
   
     </div>
   </div>
