--- a/blog7.html
+++ b/blog7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -24,28 +24,8 @@
 </head>
 <body>
 
-  <div class="wrap">
-   <div class="container">
-    <div class="row">
-     <div class="col-md-6 d-flex align-items-center">
-      <p class="mb-0 phone pl-md-2">
-       <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
-     </p>
-   </div>
-   <div class="col-md-6 d-flex justify-content-md-end">
-    <div class="social-media">
-     <p class="mb-0 d-flex">
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-    </p>
-  </div>
-</div>
-</div>
-</div>
-</div>
+  
+
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
    <a class="navbar-brand" href="index.html">Unicare</a>
