--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
           </div>
           <h3 class="heading"><a href="#"> &amp; Nook</a></h3>
           <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
-          <p><a href="blog-single.html">Read more</a></p>
+          <p><a href="blog-single.html" class="btn btn-secondary">Read more</a></p>
         </div>
       </div>
     </div>
