--- a/blog6.html
+++ b/blog6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -24,31 +24,10 @@
 </head>
 <body>
 
-  <div class="wrap">
-   <div class="container">
-    <div class="row">
-     <div class="col-md-6 d-flex align-items-center">
-      <p class="mb-0 phone pl-md-2">
-       <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
-     </p>
-   </div>
-   <div class="col-md-6 d-flex justify-content-md-end">
-    <div class="social-media">
-     <p class="mb-0 d-flex">
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-    </p>
-  </div>
-</div>
-</div>
-</div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+  
+<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Unicare</a>
+   <a class="navbar-brand" href="index.html">swizimtrust</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
