--- a/blog.html
+++ b/blog.html
@@ -71,12 +71,12 @@
             <div><a href="#">Admin</a></div>
             <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
           </div>
-          <h3 class="heading"><a href="#"> &amp; Nook</a></h3>
+          <h3 class="heading"><a href="#"> &amp; Fufu</a></h3>
           <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
-          <p><a href="blog-single.html">Read more</a></p>
+          <p><a href="blog-single.html" class="btn btn-secondary">Read more</a></p>
         </div>
       </div>
-    </div>
+    </div>  
     <div class="col-md-6 col-lg-3 d-flex ftco-animate">
       <div class="blog-entry align-self-stretch">
         <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0785.jpeg');">
