--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
             <div><a href="#">Admin</a></div>
             <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
           </div>
-          <h3 class="heading"><a href="#"> &amp; Fufu</a></h3>
+          <h3 class="heading"><a href="#"> &amp; Nook day</a></h3>
           <p>Always dream big, and dont let anyone limit your dreams because the possibilities are endless</p>
           <p><a href="blog-single.html" class="btn btn-secondary">Read more</a></p>
         </div>
