--- a/blog2.html
+++ b/blog2.html
@@ -72,7 +72,7 @@
       <p>What have you done to celebrate the girl child?
         #education #girls#girlchild</p>
       <p>
-        <img src="images/image_2.jpg" alt="" class="img-fluid">
+        <img src="images/international.jpeg" alt="" class="img-fluid">
       </p>
      
       <div class="tag-widget post-tag-container mb-5 mt-5">
