--- a/blog3.html
+++ b/blog3.html
@@ -71,7 +71,7 @@
      
       
       <p>
-        <img src="images/image_2.jpg" alt="" class="img-fluid">
+        <img src="images/Menstrual.jpeg" alt="" class="img-fluid">
       </p>
       <p>Therefore ending period poverty cannot be done in one day or by one person, so as swizim Trust we have taken the initiative towards reducing period poverty one pad at a time.</p>
       <p>Would you like to join us ?
