--- a/blog.html
+++ b/blog.html
@@ -160,7 +160,7 @@
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0784.jpg');">
+    <a href="initiatives.html" class="block-20" style="background-image: url('images/IMG_0784.jpeg');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
