--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Swizimtrust</a>
+			 <div class="site-logo">
+              <img src="images/swizimtrust-logo.jpg" alt="Logo" width="80px" style="border-radius: 50%;"/>
+            </div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
