--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h2>Our vission and Mission</h2>
+					<h2>Our vision and Mission</h2>
 				</div>
 			</div>
 			
