--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
     </div>
   </div>
-  <div class="col-md-6 pr-md-5 py-md-5 text-center">
+  <div class="row justify-content-center pb-5 mb-3">
     <div class="heading-section pt-md-5 mb-4">
      <span class="subheading">About us</span>
      <h2 class="mb-2">Who Are We?</h2>
