--- a/about.html
+++ b/about.html
@@ -67,8 +67,9 @@
     <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
     </div>
   </div>
-  <div class="row justify-content-center pb-5 mb-3">
-    <div class="heading-section pt-md-5 mb-4 ">
+  <div class="container">
+			<div class="row justify-content-center pb-5 mb-3">
+				<div class="col-md-7 heading-section text-center ftco-animate">
      <span class="subheading">About us</span>
      <h2 class="mb-2">Who Are We?</h2>
      <p>We are a dynamic for impact organization committed to fostering holistic community-impact in Zimbabwe.</p>
