Added brief descriptions and relevant pictures on all the hero sections.

--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
 <section class="hero-wrap hero-wrap-2" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/1712176235124-RDYRE1KK3S3XRCAQAR0O/DSC_0105.JPG?format=1500w');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text justify-content-center"></div>
+    <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">About Us</h1>
+       <h1 class="mb-0 bread">Swizimtrust is a community-driven organization based in Zimbabwe that focuses on fostering holistic development within local communities.</h1>
      </div>
    </div>
  </div>
