--- a/blog-single.html
+++ b/blog-single.html
@@ -48,13 +48,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_1403.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog Details</h1>
+       <h1 class="mb-0 bread">The Bulawayo Nook Hub blog highlights the transformative journey of individuals who have participated in their skill development programs.</h1>
      </div>
    </div>
  </div>
@@ -74,7 +74,7 @@
       
 </p>
   <p>Will you be there ?
-    If you’re interested in visiting us kindly dm us or leave a comment in the comment section below .</p>
+    If you're interested in visiting us kindly dm us or leave a comment in the comment section below .</p>
   
 
      <div class="tag-widget post-tag-container mb-5 mt-5">
