--- a/blog6.html
+++ b/blog6.html
@@ -49,13 +49,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_1385.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog Details</h1>
+       <h1 class="mb-0 bread"></h1>
      </div>
    </div>
  </div>
@@ -68,12 +68,12 @@
        <p>
         <img src="images/IMG_0789.jpeg" alt="" class="img-fluid">
       </p>
-      <h2 class="mb-3">Our attitudes control our lives so make sure you’re always showing up with the right attitude!</h2>
+      <h2 class="mb-3">Our attitudes control our lives so make sure you're always showing up with the right attitude!</h2>
       <p>During the exploration phase, candle making was a new experience for many of the learners. While some had seen candle making done in homes before, a significant portion of the participants were trying their hand at it for the first time.
     </p>
       <p>Engaging in the process of candle making can be a fun and creative hobby. It also presents the opportunity to turn it into a viable small business venture. By acquiring the necessary materials, tools, and techniques, individuals can craft a diverse range of unique, personalized candles.
     </p>
-      <h2 class="mb-3 mt-5">Learning a skill like candle making, even if it seems small, can have a meaningful impact on one’s life and that of their family. With dedication and determination, this newfound skill has the potential to bring about positive changes.</h2>
+      <h2 class="mb-3 mt-5">Learning a skill like candle making, even if it seems small, can have a meaningful impact on one's life and that of their family. With dedication and determination, this newfound skill has the potential to bring about positive changes.</h2>
 <p>
     <img src="images/image_2.jpg" alt="" class="img-fluid">
   </p>
