--- a/blog.html
+++ b/blog.html
@@ -48,13 +48,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_0781.jpeg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_1318.jpeg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog</h1>
+       <h1 class="mb-0 bread">Swizimtrust's blogs highlight key initiatives that reflect their commitment to empowerment and sustainable development.</h1>
      </div>
    </div>
  </div>
