--- a/blog4.html
+++ b/blog4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Swizimtrust</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -49,13 +49,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_1389.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog Details</h1>
+       <h1 class="mb-0 bread">The Food & Water Need in Africa blog highlights the need for sustainable agricultural solutions to address ongoing challenges.</h1>
      </div>
    </div>
  </div>
