--- a/blog5.html
+++ b/blog5.html
@@ -48,13 +48,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_0788.jpeg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog Details</h1>
+       <h1 class="mb-0 bread">The sewing initiative equips women with skills to start businesses, fostering economic independence and entrepreneurship in underserved communities.​</h1>
      </div>
    </div>
  </div>
