--- a/blog7.html
+++ b/blog7.html
@@ -48,7 +48,7 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://th.bing.com/th/id/OIP.9oNqrWyVlHVjeDmkS7DTogHaE5?rs=1&pid=ImgDetMain');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/IMG_1392.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
