--- a/causes.html
+++ b/causes.html
@@ -53,8 +53,8 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Causes <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Impact</h1>
+       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Impact<i class="ion-ios-arrow-forward"></i></span></p>
+       <h1 class="mb-0 bread">We are a dynamic for-impact organisation committed to fostering holistic community impact in Zimbabwe.</h1>
      </div>
    </div>
  </div>
