--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,13 @@
 	</nav>
 	<!-- END nav -->
 	
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('https://www.clearinghouseforsport.gov.au/__data/assets/image/0005/995018/Major-Event-Community-Engagement-09113-03_thumb.jpeg');" data-stellar-background-ratio="0.5">
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/DSC_0106.JPG');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end">
 				<div class="col-md-9 ftco-animate pb-5">
 					<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact us <i class="ion-ios-arrow-forward"></i></span></p>
-					<h1 class="mb-0 bread">Contact us</h1>
+					<h1 class="mb-0 bread">We would like to hear from you! Whether it is to donate or become a volunteer, do not hesitate to get in touch with us.</h1>
 				</div>
 			</div>
 		</div>
