--- a/volunteer.html
+++ b/volunteer.html
@@ -48,13 +48,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('https://img.freepik.com/premium-photo/fist-motivation-team-support-netball-training-game-screaming-with-hope-faith-sports-court-teamwork-fitness-coach-group-excited-athlete-girls-with-pride-solidarity-together_590464-157422.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/DSC_0088.JPG');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Volunteer <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Our Team</h1>
+       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Team <i class="ion-ios-arrow-forward"></i></span></p>
+       <h1 class="mb-0 bread">The SwizimTrust team is focused on driving community development through various initiatives in Zimbabwe.</h1>
      </div>
    </div>
  </div>
@@ -64,7 +64,7 @@
  <div class="container">
   <div class="row justify-content-center pb-5 mb-3">
     <div class="col-md-7 heading-section text-center ftco-animate">
-     <span class="subheading">Our Teamr</span>
+     
      <h2>Our Team</h2>
    </div>
  </div>
