Added the vision and mission on the home page.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	
 	<section class="hero-wrap js-fullheight">
 		<div class="home-slider js-fullheight owl-carousel">
-			<div class="slider-item js-fullheight" style="background-image:url(https://th.bing.com/th/id/R.32c05e6bc4fa4f7bc34ffc88a0d87a24?rik=lnqNkv%2fffeF7tg&pid=ImgRaw&r=0);">
+			<div class="slider-item js-fullheight" style="background-image:url(images/IMG_1389.jpg);">
 				<div class="overlay-1"></div><div class="overlay-2"></div><div class="overlay-3"></div><div class="overlay-4"></div>
 				<div class="container">
 					<div class="row no-gutters slider-text js-fullheight align-items-center" style="margin-top: 10px;">
@@ -156,6 +156,15 @@
 				</div>
 				<div class="col-md-7 wrap-about py-5">
 					<div class="heading-section pr-md-5 pt-md-5">
+							<div class="wrap-about py-5">
+					
+								<div class="heading-section pr-md-5 pt-md-5" style="margin-top: -150px;">
+								<h2 class="ml-2">Vision</h2>
+								<p class="ml-2">To partner with communities in Zimbabwe, so that individuals can unlock their potential and drive holistic, impactful change.</p>
+		  					<h2 class="ml-2">Mission</h2>
+								<p class="ml-2">We are a dynamic for-impact organization committed to fostering holistic community impact in Zimbabwe.</p>
+						</div>
+					</div>
 						<span class="subheading">Why Swizimtrust?</span>
 						<h2 class="mb-4">Swizimtrust - Empowering Communities for Holistic Impact</h2>
 						<p>Strategic and Mindful Approaches: Our initiatives are carefully planned and implemented to maximize impact.<br>We consider the long-term effects of our actions, aiming to create solutions that are not only effective but sustainable. </p>
@@ -193,6 +202,9 @@
 							</div>
 						</div>
 					</div>
+          
+	
+
 				</div>
 			</div>
 		</div>
