Centerd the donate now button on the home page and increased the margin-top of the first paragraph on the about page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 	<section class="hero-wrap js-fullheight">
 		<div class="home-slider js-fullheight owl-carousel">
 			<div class="slider-item js-fullheight" style="background-image:url(images/IMG_1389.jpg);">
-				<div class="overlay-1"></div><div class="overlay-2"></div><div class="overlay-3"></div><div class="overlay-4"></div>
+				<div class="overlay-1"></div>
+				<div class="overlay-2"></div>
+				<div class="overlay-3"></div>
+				<div class="overlay-4"></div>
 				<div class="container">
 					<div class="row no-gutters slider-text js-fullheight align-items-center" style="margin-top: 10px;">
 						<div class="col-md-10 col-lg-7 ftco-animate" style="margin-top: 10px;">
@@ -215,9 +218,7 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Thank you to our donors and sponsors</span>
-					
-				
+					<div class="subheading">Thank you to our donors and sponsors</div>		
 								</div>
 							</div>
 						</div>
@@ -226,7 +227,7 @@
 			</div>
 		</div>
 	</section>
-	<p><a href="#" class="btn btn-light w-10" style="margin-left: 850px;">Donate Now</a></p>
+	<button class="btn btn-secondary py-3 px-2 px-md-4" style="display: block; margin: 0 auto; margin-bottom: 50px;"><a href="#" style="color: #fff;">Donate Now</a></button>
 	<section class="ftco-counter" id="section-counter">
 		<div class="container">
 			<div class="row">
