--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
 					<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">Donate</a></li>
 					<li class="nav-item cta"><a href="index.html" class="nav-link">Donate</a></li>
      </ul>
    </div>
