--- a/blog7.html
+++ b/blog7.html
@@ -40,7 +40,7 @@
        <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
        <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-       <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+       <li class="nav-item"><a href="contact.html" class="nav-link">Donate</a></li>
        <li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
      </ul>
    </div>
